--- a/app/partials/map_legend.html
+++ b/app/partials/map_legend.html
@@ -1,4 +1,4 @@
-<div class="map_legend">
+<div ng-show="hasLengend" class="map_legend">
     <input type="checkbox" ng-model="showLegend" ng-init="showLegend=true" selected> Show legend
     <div ng-show="showLegend">
       <img
