--- a/mapotron2/templates/vue.html
+++ b/mapotron2/templates/vue.html
@@ -89,12 +89,17 @@
     }
 
     .form-check-input {
-      position: relative;
+      position: absolute;
       margin-top: 2%;
-      right: -2%;
+      right: 35%;
       padding: 5px;
       margin-left: 6%;
     }
+    .slide {
+    padding: 7px 0px;
+    width: 62%;
+    height: 4px;
+}
   </style>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-slider-component@latest/theme/default.css">
 
@@ -115,13 +120,12 @@
             </div>
           </div>
           <div class="toast-body">
-            <div v-for="layer in layers"
-              :class="{ 'active-layer': layer.show, 'not-layer': !layer.show, 'layer-control': true }">
-              <span>{{"layer.title"|vue}}</span>
-              <input class="form-check-input" type="checkbox" :v-model="layer.show"
+            <div v-for="layer in layers" class="active-layer">
+              <span>{{"layer.title"|vue}} </span>
+              <input class="form-check-input" type="checkbox" v-model="layer.visible"
                 v-on:change="toggleLayer(layer)" />
-              <vue-slider class="slide" tooltip="none" :min="0" :max="1" :interval="0.01" v-model="layer.opacity"
-                v-on:change="updateOpacity(layer)"></vue-slider>
+              <vue-slider v-show="layer.show" class="slide" tooltip="none" :min="0" :max="1" :interval="0.01"
+                v-model="layer.opacity" v-on:change="updateOpacity(layer)"></vue-slider>
             </div>
           </div>
         </div>
@@ -226,6 +230,7 @@
               position: google.maps.ControlPosition.RIGHT_TOP
             }
           };
+          // layer.visible = layer.show;
           this.map = new google.maps.Map(document.getElementById('map'), mapOptions);
           this.$nextTick(() => {
             let layer = this.layers.find(x => x.layer_id === this.selectedLayer);
@@ -261,6 +266,7 @@
         methods: {
           toggleLayer(layer) {
             // the layer has been initialized
+
             if (layer.mapLayer) {
               if (layer.show) {
                 // remove the layer from the map
@@ -282,6 +288,7 @@
                 this.map.overlayMapTypes.push(layer.mapLayer);
               })
             }
+
           },
           updateOpacity(layer) {
             if (layer.mapLayer) {
