--- a/mapotron2/templates/vue.html
+++ b/mapotron2/templates/vue.html
@@ -226,6 +226,7 @@
           },
           methods: {
             toggleLayer(layer) {
+              console.log('layer:', layer)
               // the layer has been initialized
               if (layer.mapLayer) {
                 if (layer.show) {
