--- a/mapotron2/templates/mountains.html
+++ b/mapotron2/templates/mountains.html
@@ -66,16 +66,6 @@
         height: 20px;
         width: 20px;
       }
-      .small-line-chart {
-        position: relative;
-        width: 100%;
-        height: 100px;
-        /* max-width: 100px; */
-      }
-      .btn-download {
-        font-size: .775rem;
-        line-height: 1.25;
-      }
   </style>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-slider-component@latest/theme/default.css">
 
@@ -89,7 +79,6 @@
           <div id="layer-toast" class="toast">
             <div class="toast-header">
               <strong class="me-auto">{{collection.title}}</strong>
-              <!-- <small>11 mins ago</small> -->
               <div v-if="layerLoading" id="layer-spinner" class="spinner-border text-primary" role="status">
                 <span class="visually-hidden">Loading...</span>
               </div>
@@ -126,69 +115,38 @@
                 <span class="visually-hidden">Loading...</span>
               </div>
             </div>
-            <!-- <div class="toast-body" v-if="Object.keys(sampleData).length > 0">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">Layer</th>
-                    <th scope="col">Value</th>
-                    <th scope="col">Unit</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr v-for="layer,val in sampleData">
-                    <th scope="row">{{"layer[0]['title']" | vue }}</th>
-                    <td scope="row" v-html="$options.filters.formatNumber(layer[0]['values']['b1'])">{{"layer[0]['values']['b1']" | vue }}</td>
-                    <td scope="row">{{"layer[0]['units']" | vue }}</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div> -->
             <div class="toast-body" v-if="Object.keys(sampleData).length > 0">
               <div v-for="layer,val in sampleData">
-                <div v-if="val == 'tcf_ensemble_mnv16_2001-2018'">
+                <div v-if="val == 'basic'">
                   <hr />
-                  <strong>{{"layer[0]['title']" | vue }}:</strong>
-                  <em>{{"layer[0]['values']['b1']" | vue }}%</em>
-                </div>
-                <div v-if="val == 'tcf_wdpa_Dec2016_v16'">
-                  <hr />
-                  <strong>{{"layer[0]['title']" | vue }}</strong>
+                  <strong>GMBA Mountain Inventory v2</strong>
                   <div>
                     <table class="table">
                       <thead>
                         <tr>
-                          <th scope="col">NAME</th>
-                          <th scope="col">ISO3</th>
-                          <th scope="col">IUCN_CAT</th>
-                          <th scope="col">STATUS</th>
-                          <th scope="col">TCF_2001 (km<sup>2</sup>)</th>
-                          <th scope="col">TCF_2018 (km<sup>2</sup>)</th>
-                          <th scope="col">TCF_Loss (km<sup>2</sup>)</th>
-                          <th scope="col">TCF_Loss (percent)</th>
+                          <th scope="col">MapName</th>
+                          <th scope="col">Countries</th>
+                          <th scope="col">Path</th>
+                          <th scope="col">Area</th>
+                          <th scope="col">Elevation-Low</th>
+                          <th scope="col">Elevation-High</th>
+                          <th scope="col">Wiki</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr v-for="feat,val in layer">
-                          <td scope="row">{{"feat['values']['NAME']" | vue }}</td>
-                          <td scope="row">{{"feat['values']['ISO3']" | vue }}</td>
-                          <td scope="row">{{"feat['values']['IUCN_CAT']" | vue }}</td>
-                          <td scope="row">{{"feat['values']['STATUS']" | vue }}</td>
-                          <td scope="row">{{"feat['values']['tcfensmn01']" | vue }}</td>
-                          <td scope="row">{{"feat['values']['tcfensmn18']" | vue }}</td>
-                          <td scope="row">{{"feat['values']['tcfensmnvar']" | vue }}</td>
-                          <td scope="row">{{"feat['values']['tcfensmnpct']" | vue }}</td>
+                          <td scope="row">{{"feat['values']['MapName']" | vue }}</td>
+                          <td scope="row">{{"feat['values']['Countries']" | vue }}</td>
+                          <td scope="row">{{"feat['values']['Path']" | vue }}</td>
+                          <td scope="row">{{"feat['values']['Area']" | vue }}</td>
+                          <td scope="row">{{"feat['values']['Elev_Low']" | vue }}</td>
+                          <td scope="row">{{"feat['values']['Elev_High']" | vue }}</td>
+                          <td scope="row"><span v-if="feat['values']['WikiDataID']">
+                            <a :href="feat.values.WikiDataURL" target="_blank">{{"feat.values.WikiDataID" | vue }}</a>
+                          </span></td>
                         </tr>
                       </tbody>
                     </table>
-                  </div>
-                </div>
-                <div v-if="val == 'tcf_ensemble_mn_v16'">
-                  <hr />
-                  <strong>{{"layer[0]['title']" | vue }}</strong>
-                  <!-- <span><button v-on:click="downloadChartData(layer[0])" type="button" class="btn btn-link btn-sm btn-download">Download values as CSV</button></span> -->
-                  <div style="position: relative; height:55vh; width:55vw;">
-                    <line-chart ref='chart' :chart-data="generateChartData(layer[0])" :options="chartOptions"></line-chart>
                   </div>
                 </div>
               </div>
@@ -202,13 +160,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.0/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-slider-component@latest/dist/vue-slider-component.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-    <script src="https://unpkg.com/chartjs-plugin-error-bars@1.2.3"></script>
-    <script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@3.1.1/dist/chart.min.js"></script> -->
-    <!-- <script src="https://unpkg.com/vue-chartjs@3.5.1/dist/vue-chartjs.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@0.1.2"></script>
     <script src="/static/ee_api_js.js"></script>
     <script src="/static/mapstyles.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -230,34 +182,6 @@
             })
         }
         Vue.component('vueSlider', window[ 'vue-slider-component' ]);
-
-        Vue.component('line-chart', {
-          extends: VueChartJs.Line,
-          mixins: [VueChartJs.mixins.reactiveData],
-          data: () => ({
-            chartData: '',
-            options: {
-              scales: {
-                yAxes: [{
-                  ticks: {
-                    min: 0,
-                    max: 100
-                  }
-                }]
-              },
-              responsive: true,
-              maintainAspectRatio: false,
-              plugins: {
-                chartJsPluginErrorBars: {
-                  color: '#f46d43',
-                }
-              }
-            }
-          }),
-          mounted () {
-            this.renderChart(this.chartData, {responsive: true, maintainAspectRatio: false});
-          }
-        });
 
         function getDates(startDate, endDate, interval) {
           const duration = endDate - startDate;
@@ -391,67 +315,6 @@
               this.sampleData = {};
               this.marker.setMap(null);
             },
-            generateChartData(layerData) {
-              if (this.$refs.chart && this.$refs.chart.length > 0) {
-                let histvals = layerData['values']['histogram'];
-                let sdvals = layerData['values']['stdev'];
-                const hist_dates = getTCFYears(); // getTCFDates(this.collSelectedYear);
-                const hist_values = histvals.split(",").map(v => Number(v));
-                let hist_sd = {};
-                let minTickValue = 0;
-                let maxTickValue = 100;
-                sdvals.split(",").forEach(function(v, i) {
-                  const currentDate = hist_dates[i];
-                  const currentError = Number(v) / 2;
-                  hist_sd[currentDate] = {plus: currentError, minus: currentError};
-                  minTickValue = Math.min(minTickValue, (hist_values[i]-Number(v)));
-                  maxTickValue = Math.min(maxTickValue, (hist_values[i]+Number(v)));
-                });
-                var myChartData = {
-                  labels: hist_dates,
-                  datasets: [
-                    {
-                      label: `${layerData['title']} (${layerData['units']})`,
-                      backgroundColor: '#4575B4',
-                      borderColor: '#4575B4',
-                      borderWidth: 2,
-                      pointRadius: 0,
-                      fill: false,
-                      data: hist_values,
-                      errorBars: hist_sd
-                    }
-                  ]
-                };
-                this.$refs.chart[0].chartData = myChartData;
-                // this.chartOptions['scales'] = {yAxes: {ticks: {min: minTickValue, max: maxTickValue}}};
-                // this.$refs.chart[0].options = this.chartOptions;
-              }
-              return null;
-            },
-            downloadChartData(layerData) {
-              if (this.$refs.chart && this.$refs.chart.length > 0) {
-                let histvals = layerData['values']['histogram'];
-                // const hist_dates = getTCFDates(this.collSelectedYear).map(d => d.toISOString().slice(0, 10));
-                const hist_dates = getTCFYears();
-                const hist_values = histvals.split(",").map(v => Number(v) * 0.01);
-                
-                const hist_data = [];
-                for (var i = 0; i<hist_dates.length; i++) {
-                  const row_data = [hist_dates[i], hist_values[i]]
-                  hist_data.push(row_data.join(","));
-                }
-                
-                let dl_data = "date,value\n" + hist_data.join("\n");
-                const dl_filename = `chelsa_earthenv-precip_rate_${this.collSelectedYear}.csv`;
-                const dl_link = document.createElement("a");
-                dl_link.href = URL.createObjectURL(new Blob([dl_data], { type: "text/csv" }));
-                dl_link.setAttribute("download", dl_filename);
-                document.body.appendChild(dl_link);
-                dl_link.click();
-                document.body.removeChild(dl_link);
-              }
-              return null;
-            },
           },
           filters: {
             formatNumber(value) {
@@ -503,12 +366,7 @@
               layerLoading: false,
               marker: null,
               collYears: getTCFYears(),
-              collSelectedYear: TCF_YEAR_DEFAULT,
-              chartData: null,
-              chartOptions: {
-                responsive: true, 
-                maintainAspectRatio: false
-              }
+              collSelectedYear: TCF_YEAR_DEFAULT
             }
           },
         });
