--- a/mapotron2/templates/vue.html
+++ b/mapotron2/templates/vue.html
@@ -78,6 +78,7 @@
       min-width: 25%;
       right: -8%;
     }
+
     .info-icon {
       cursor: pointer;
     }
@@ -101,18 +102,23 @@
     table tbody tr td {
       border-width: 0.2px;
     }
+
     .selected {
       color: red;
-      font-size: 1.1em;;
+      font-size: 1.1em;
+      ;
     }
+
     .slideerr {
       padding: 7px 0px;
       max-width: 62%;
       height: 4px;
     }
+
     .page-link-text {
       color: #000;
     }
+
     .page-link-text:hover {
       color: #000;
       background-color: #fff;
@@ -141,9 +147,12 @@
               <input class="form-check-input" type="checkbox" v-model="layer.visible"
                 v-on:change="toggleLayer(layer)" />
               <span>{{"layer.title"|vue}}</span>
-              <span class="float-end info-icon" v-show="layer.info" data-bs-toggle="modal" data-bs-target="#infoModal" v-bind="{ 'data-bs-info-title': layer.title, 'data-bs-info-body': layer.info }">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
-                  <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+              <span class="float-end info-icon" v-show="layer.info" data-bs-toggle="modal" data-bs-target="#infoModal"
+                v-bind="{ 'data-bs-info-title': layer.title, 'data-bs-info-body': layer.info }">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-info-circle-fill" viewBox="0 0 16 16">
+                  <path
+                    d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
                 </svg>
               </span>
               <vue-slider v-show="layer.show" class="slideerr" tooltip="none" :min="0" :max="1" :interval="0.01"
@@ -175,7 +184,8 @@
               </thead>
               <tbody>
                 <tr v-for="layer,val in sampleData">
-                  <th :class="{selected: layer[0]['show']}" scope="row">{{"layer[0]['title']" | vue }} {{"layer[0]['show'] ? ' (selected)' : ''"|vue}} </th>
+                  <th :class="{selected: layer[0]['show']}" scope="row">{{"layer[0]['title']" | vue }}
+                    {{"layer[0]['show'] ? ' (selected)' : ''"|vue}} </th>
                   <td scope="row" v-html="$options.filters.formatNumber(layer[0]['values']['b1'])">
                     {{"layer[0]['values']['b1']" | vue }}</td>
                   <td scope="row">{{"layer[0]['units']" | vue }}</td>
@@ -199,13 +209,15 @@
                     </thead>
                     <tbody v-for="feat, val in layer.slice(paginIndex, paginIndex +1)">
                       <!-- <pre>{{"layer"|vue}}</pre> -->
-                      <tr v-for="v, k in feat['values']" >
+                      <tr v-for="v, k in feat['values']">
                         <template v-if="k !== 'WikiDataURL'">
                           <td scope="row">{{"k.replace('_', ' ')" | vue }}</td>
-                          <td scope="row"  v-if="k !== 'WikiDataID' || ( k === 'WikiDataID' && !feat.values.WikiDataURL)">{{"v" | vue }}</td>
-                          <td scope="row"  v-else><span>
-                            <a :href="feat.values.WikiDataURL" target="_blank">{{"feat.values.WikiDataID" | vue }}</a>
-                          </span></td>
+                          <td scope="row"
+                            v-if="k !== 'WikiDataID' || ( k === 'WikiDataID' && !feat.values.WikiDataURL)">{{"v" | vue
+                            }}</td>
+                          <td scope="row" v-else><span>
+                              <a :href="feat.values.WikiDataURL" target="_blank">{{"feat.values.WikiDataID" | vue }}</a>
+                            </span></td>
                         </template>
                       </tr>
                     </tbody>
@@ -225,7 +237,7 @@
       </div>
     </div>
   </div>
-  
+
   <!-- InfoModal -->
   <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -352,7 +364,7 @@
         methods: {
           toggleLayer(layer) {
             // the layer has been initialized
-
+            console.log('layer.mapLayer ', layer.mapLayer, 'layer.show ', layer.show)
             if (layer.mapLayer) {
               if (layer.show) {
                 // remove the layer from the map
@@ -360,6 +372,7 @@
                 this.map.overlayMapTypes.removeAt(i);
               } else {
                 this.map.overlayMapTypes.push(layer.mapLayer);
+                this.sortLayers();
               }
               layer.show = !layer.show;
             } else {
@@ -371,10 +384,37 @@
                 layer.show = true;
                 layer.mapLayer.setOpacity(layer.opacity);
                 this.map.overlayMapTypes.push(layer.mapLayer);
+              }).then((x) => this.sortLayers())
+            }
+          },
+          sortLayers() {
+            var index = 0;
+            var swap = false;
+            // Sorting the layers based on layer index
+            if (this.map.overlayMapTypes.getLength() >= 2) {
+              var last_layer = this.map.overlayMapTypes.getAt(this.map.overlayMapTypes.getLength() - 1)
+              this.map.overlayMapTypes.forEach((x) => {
+                if (swap) {
+                  this.map.overlayMapTypes.setAt(index, last_layer)
+                  last_layer = x;
+                } else {
+                  // get the index of the current layer
+                  var currenti = this.layers.findIndex(layer => layer.mapLayer === x)
+                  // get index of the new layer
+                  var newi = this.layers.findIndex(layer => layer.mapLayer === last_layer)
+                  // compare the value of their indices according to the config file(index)
+                  // iterate until the new layers index is less than the current layers index
+                  if (this.layers[currenti].index >= this.layers[newi].index) {
+                    this.map.overlayMapTypes.setAt(index, last_layer)
+                    last_layer = x;
+                    swap = true;
+                  }
+                }
+                index++;
               })
             }
           },
-          paginator(i){
+          paginator(i) {
             this.paginIndex += i;
           },
           updateOpacity(layer) {
@@ -404,9 +444,9 @@
         },
         data: function () {
           var collection = JSON.parse('{{ collection | tojson }}')
-          
+
           var layers = Object.values(collection.layers)
-          layers.sort(x => - x.index)
+          layers.sort((x, y) => x.index - y.index)
           var selectedLayer = '{{layer_id}}'
           layers.forEach((layer, i) => {
             layer.gmapsLayer = null;
